# ha-ai-learner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.hu.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
examples/: claude_desktop_config.example.json
ha_ai_learner/: __init__.py  cli.py  config.py  ha_client.py  interview.py  knowledge.py  mcp_server.py  miniws.py  patterns.py  scanner.py
tests/: mock_ha.py  test_e2e.py
